--- a/app/views/mocks/_form.html.erb
+++ b/app/views/mocks/_form.html.erb
@@ -37,6 +37,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :status %>
+    <%= form.text_field :status %>
+  </div>
+
+  <div class="field">
     <%= form.label :content_type %>
     <%= form.text_field :content_type %>
   </div>
