update partners and apis views

--- a/app/views/endpoints/_form.html.erb
+++ b/app/views/endpoints/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="field">
+    <%= form.label :external_api %>
+    <%= form.text_field :external_api %>
+  </div>
+
+  <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
