--- a/app/views/endpoints/index.html.erb
+++ b/app/views/endpoints/index.html.erb
@@ -2,29 +2,7 @@
 
 <h1>Endpoints</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Endpoint</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @endpoints.each do |endpoint| %>
-      <tr>
-        <td><%= endpoint.name %></td>
-        <td><%= endpoint.description %></td>
-        <td><%= endpoint.endpoint %></td>
-        <td><%= link_to 'Show', endpoint %></td>
-        <td><%= link_to 'Edit', edit_endpoint_path(endpoint) %></td>
-        <td><%= link_to 'Destroy', endpoint, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'endpoint_list', endpoints: @endpoints %>
 
 <br>
 
