--- a/app/views/mocks/_form.html.erb
+++ b/app/views/mocks/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :endpoint_id %>
+    <%= form.select :endpoint_id, options_from_collection_for_select(Endpoint.all, :id, :endpoint) %>
+  </div>
+
+  <div class="field">
     <fieldset>
       <legend>Headers:</legend>
       <%= form.fields_for :headers do |headers_form| %>
@@ -64,11 +69,6 @@
   <div class="field">
     <%= form.label :position %>
     <%= form.number_field :position %>
-  </div>
-
-  <div class="field">
-    <%= form.label :endpoint_id %>
-    <%= form.text_field :endpoint_id %>
   </div>
 
   <div class="actions">
