--- a/app/views/external_apis/_form.html.erb
+++ b/app/views/external_apis/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :partner_id %>
-    <%= form.text_field :partner_id %>
+    <%= form.select :partner_id, options_from_collection_for_select(Partner.all, :id, :name) %>
   </div>
 
   <div class="actions">
