add V sad css and navbar

--- a/app/views/external_apis/_external_api_list.html.erb
+++ b/app/views/external_apis/_external_api_list.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <td><%= external_api.name %></td>
         <td><%= external_api.description %></td>
-        <td><%= external_api.partner_id %></td>
+        <td><%= external_api.partner.name %></td>
         <td><%= link_to 'Show', external_api %></td>
         <td><%= link_to 'Edit', edit_external_api_path(external_api) %></td>
         <td><%= link_to 'Destroy', external_api, method: :delete, data: { confirm: 'Are you sure?' } %></td>
